# mupdf-rs-mcp-server

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
src/: error.rs  lib.rs  main.rs  server.rs  state.rs
src/tools/: document.rs  highlevel.rs  mod.rs  page.rs  session.rs  text.rs
tests/: integration_tests.rs
tests/fixtures/: README.md
